--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cra-template": "1.0.3",
     "node-sass": "^4.13.1",
     "react": "^16.9.0",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
